--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 30 17:36:09 CEST 2017
-sdk.dir=C\:\\Users\\marco\\AppData\\Local\\Android\\Sdk
+#Wed May 03 11:07:33 CEST 2017
+sdk.dir=/home/gaesse/Android/Sdk
