--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 30 10:07:56 CEST 2017
-sdk.dir=C\:\\Users\\marco\\AppData\\Local\\Android\\Sdk
+#Fri Jun 23 10:45:22 CEST 2017
+sdk.dir=/home/gaesse/Android/Sdk
