--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
             </intent-filter>
         </activity>
         <activity android:name="com.progettoids.iotforemergency.gui.HomeActivity" />
-        <activity android:name=".gui.RegistrazioneActivity"
+        <activity
+            android:name=".gui.RegistrazioneActivity"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize" />
     </application>
 </manifest>
